# math_video_download

./: Cargo.toml  README.md  class1_down.txt  class2_down.txt  class3_down.txt  class3_up.txt
examples/: parse_url.rs  read_txt.rs
src/: downloader.rs  lib.rs  main.rs
