[package]
name = "math_vedio_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "stream"] }
scraper = "0.13.0"
spider = { version = "1.9.0", features = ["regex"] }
futures-util = "0.3.21"
indicatif = "0.16.2"
tokio = { version = "1.19.2", features = ["full"] }